--- a/app/views/example_mailer/sample_email.html.erb
+++ b/app/views/example_mailer/sample_email.html.erb
@@ -7,9 +7,9 @@
     <h1>Hi <%= @user.name %></h1>
     <p>
       Sample mail sent using smtp.
-      Some more stuff to type in
-      Just to double check things
-      are working.
+      
+      This is a gem test for action mailer.
+      This is coming from views/sample_email.html.erb
     </p>
   </body>
 </html>
